# Cpp_Raylib_Libtorch_SnakeAI

./: .clang-tidy  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt
Plotter/: CMakeLists.txt  Plotter.cpp
Plotter/include/plotter/: Plotter.h
examples/: CMakeLists.txt
examples/birdy/: BirdyGame.cpp  BirdyGame.h  CMakeLists.txt  main.cpp
examples/dino/: CMakeLists.txt  DinoGame.cpp  DinoGame.h  main.cpp
examples/peg_solitaire/: CMakeLists.txt  PegSolitaire.cpp  PegSolitaire.h  main.cpp
examples/race_topdown/: CMakeLists.txt  Car.cpp  Car.h  RaceTopDown.cpp  RaceTopDown.h  Track.cpp  Track.h  Track1.cpp  Track1.h  common.cpp  common.h  main.cpp
examples/skifree/: CMakeLists.txt  SkiFree.cpp  SkiFree.h  main.cpp
examples/skifree/assets/: .gitignore
examples/snake/: CMakeLists.txt  SnakeGameAI.cpp  SnakeGameAI.h  main.cpp
mlgames/: Agent.cpp  AgentQTrainer.cpp  CMakeLists.txt  GenPopulation.cpp  LinearGen.cpp  LinearNN.cpp  Linear_QNet.cpp  MultiLayer.cpp  NetDNA.cpp  NetGen.cpp  NetPopulation.cpp  Plotter.cpp  PopulationDNA.cpp  QTrainer.cpp
mlgames/include/mlgames/: AbstractGame.h  Agent.h  AgentQTrainer.h  GenPopulation.h  LinearGen.h  LinearNN.h  Linear_QNet.h  MultiLayer.h  NetDNA.h  NetGen.h  NetPopulation.h  PopulationDNA.h  QTrainer.h
src/: Agent.cpp  Agent.h  Linear_QNet.cpp  Linear_QNet.h  QTrainer.cpp  QTrainer.h  SnakeGameAI.cpp  SnakeGameAI.h  main.cpp
